# Cai-Command-AI

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  FEATURES.md  OPERATING.md  README.md  pyproject.toml  todo.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
cai/: __init__.py  agent.py  cli.py  config.py  processes.py  providers.py  review.py  tools.py  transcript.py  tui.py
folder/: cai-transcript.md  hello_random.py  index.html  random_numbers_story.txt
tests/: test_agent.py  test_cli.py  test_config.py  test_integration.py  test_providers.py  test_review.py  test_small_model.py  test_transcript.py
tests/snapshots/: terminal_demo_ascii.txt
