[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cai"
version = "0.1.0"
description = "Cai: a terminal coding agent for hosted APIs and local models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
  { name = "Cai contributors" }
]
keywords = ["agent", "cli", "coding-assistant", "local-models", "openai-compatible"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
cai = "cai.cli:main"

[tool.setuptools.packages.find]
include = ["cai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["cai", "tests"]
ignore_missing_imports = true
